--- a/chatbot/genre.ipynb
+++ b/chatbot/genre.ipynb
@@ -86,6 +86,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Жанры</h1>\n",
+    "<h3>0 - рок</h3>\n",
+    "<h3>1 - поп</h3>\n",
+    "<h3>2 - джаз</h3>\n",
+    "<h3>3 - классическая</h3>\n",
+    "<h3>4 - танцевальная</h3>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -117,6 +129,18 @@
     "# Evaluate the classifier\n",
     "y_pred = clf.predict(X_test)\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = 'new_audio_file.wav'\n",
+    "features = extract_mfccs(file_path)\n",
+    "genre = clf.predict([features])\n",
+    "print('Genre:', genre)"
    ]
   }
  ],
